--- a/css/style.default.css
+++ b/css/style.default.css
@@ -3548,3 +3548,5 @@ a.list-group-item.active > .badge,
   left: 15px;
   right: 15px;
 }
+
+.staticMenuItem p {font-weight:bold;text-align:center;}
